<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidApp</string>
    
    <!-- Dialog -->
    <string name="dialog_tip_title">提示</string>
    <string name="dialog_upgrade_title">升级</string>
    <string name="dialog_upgrade_now">立即升级</string>
    <string name="dialog_upgrade_later">稍后提醒</string>
    <string name="dialog_gender_title">选择性别</string>
    <string name="dialog_edit_info">是否保存更改设置？</string>
    <string name="dialog_log_upload_title">上传日志</string>
    <string name="dialog_log_upload_hint">请输入日志说明</string>
    <string name="dialog_log_upload_ok">提交</string>
    
    <!-- Progress -->
    <string name="progress_waiting">处理中,请稍候&#8230;</string>
    <string name="progress_login">登录中,请稍候&#8230;</string>
    <string name="progress_upload_avatar">正在上传头像</string>
    <string name="progress_search_contact">正在搜索联系人,请稍候&#8230;</string>
    
    <!-- Toast -->
    <string name="toast_upload_avatar_success">头像已上传</string>
    <string name="toast_upload_avatar_failure">上传头像失败</string>
    <string name="toast_sms_code">验证码已发送，请注意查收</string>
    
    <!-- Login -->
    <string name="login_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="login_register">用户注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_username_hint">输入手机号码</string>
    <string name="login_username_validation_mobile">请您输入正确的手机号码</string>
    <string name="login_password_hint">输入登录密码</string>
    
    <!-- Register -->
    <string name="register_title">用户注册</string>
    <string name="register_next">下一步</string>
    <string name="register_license">已阅读并同意《<a href="http://www.baidu.com">用户服务协议</a>》</string>
    <string name="register_username_hint">输入手机号</string>
    <string name="register_username_exist">手机号已被他人使用</string>
    <string name="register_passcode_hint">输入验证码</string>
    <item name="register_password_hint" type="string">@string/login_password_hint</item>
    <string name="register_password_validation_length">密码长度应为6-20位</string>
    
    <!-- FindPassword -->
    <string name="find_password_title">重置密码</string>
    
    <!-- Message -->
    <string name="message_title">消息</string>
    
    <!-- Friend -->
    <string name="friend_title">搜索</string>
    <string name="friend_by_group">分组</string>
    <string name="friend_all">全部</string>
    <string name="friend_group">群</string>
    <string name="friend_discuss">讨论组</string>
    <string name="friend_public">公众好友</string>
    <string name="friend_recommend">好友推荐</string>
    <string name="friend_info">详细资料</string>
    <string name="friend_phone">电话号码</string>
    <string name="friend_region">地区</string>
    <string name="friend_add">加为好友</string>
    
    <!-- Beside -->
    <string name="beside_demo">Demo</string>
    <string name="beside_effect">Effect</string>
    <string name="beside_test">Test</string>
    
    <!-- More -->
    <string name="more_title">更多</string>
    <string name="more_qrcode">我的二维码</string>
    <string name="more_wallet">我的钱包</string>
    <string name="more_order">订单状态</string>
    <string name="more_evaluation">我的评价</string>
    <string name="more_message">消息中心</string>
    
    <!-- Setting -->
    <string name="setting_title">应用设置</string>
    <string name="setting_password">修改密码</string>
    <string name="setting_phone">绑定手机</string>
    <string name="setting_version">版本更新</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_logout">退出登录</string>
    
    <!-- EditPassword -->
    <string name="edit_password_title">修改密码</string>
    <string name="edit_password_old_hint">旧密码</string>
    <string name="edit_password_new_hint">新密码</string>
    <string name="edit_password_copy_hint">确认新密码</string>
    <string name="edit_password_copy_validation">两次输入密码不一致！</string>
    
    <!-- Authentication -->
    <string name="authentication_title">实名认证</string>
    <string name="authentication_introduction">请务必上传真实资料，以免影响使用</string>
    <string name="authentication_commit">提交</string>
    <string name="authentication_finish">页面在%d秒后自动关闭</string>
    <string name="authentication_yes">已认证</string>
    <string name="authentication_no">未认证</string>
    
    <!-- Me -->
    <string name="me_title">个人信息</string>
    <string name="me_avatar">头像</string>
    <string name="me_nickname">昵称</string>
    <string name="me_gender">性别</string>
    <string name="me_birthday">生日</string>
    <string name="me_region">地区</string>
    <string name="me_signature">个性签名</string>
    <string name="me_no_value">未填写</string>

</resources>