<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <!-- 头像 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/login_avatar" />

    <!-- 账号输入 -->
    <engine.android.widget.component.input.InputBox
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- 密码输入 -->
    <engine.android.widget.component.input.InputBox
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/login"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_login" />

    <!-- Bottom -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <!-- 用户注册 -->
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_red"
            android:text="@string/login_register" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/login_red"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <!-- 找回密码 -->
        <TextView
            android:id="@+id/find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_red"
            android:text="@string/login_find_password" />
        
    </LinearLayout>

</LinearLayout>