<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 广告位 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:src="@drawable/beside_banner"
        android:scaleType="fitXY" />
	
    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/divider_category" />
    
    <engine.android.widget.common.layout.ActionContainer
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	
    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/divider_category" />
	    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	    
    	<TextView
	        android:id="@+id/demo"
	        android:layout_width="0px"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/list_selector_background"
	        android:gravity="center_vertical"
	        android:paddingLeft="24dp"
	        android:paddingTop="24dp"
	        android:paddingBottom="24dp"
	        android:text="@string/beside_demo"
	        android:drawableLeft="@drawable/beside_demo"
	        android:drawablePadding="8dp" />
	    
	    <View
	        android:layout_width="1px"
	        android:layout_height="match_parent"
	        android:background="@color/divider_horizontal" />
	    
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="0px"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	        
		    <TextView
		        android:id="@+id/effect"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/list_selector_background"
		        android:gravity="center_vertical"
		        android:paddingLeft="24dp"
		        android:paddingTop="24dp"
		        android:paddingBottom="24dp"
		        android:text="@string/beside_effect"
		        android:drawableLeft="@drawable/beside_effect"
		        android:drawablePadding="8dp" />
		    
		    <View
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:background="@color/divider_horizontal" />
	        
		    <TextView
		        android:id="@+id/test"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/list_selector_background"
		        android:gravity="center_vertical"
		        android:paddingLeft="24dp"
		        android:paddingTop="24dp"
		        android:paddingBottom="24dp"
		        android:text="@string/beside_test"
		        android:drawableLeft="@drawable/beside_test"
		        android:drawablePadding="8dp" />
		    
	    </LinearLayout>
	    
    </LinearLayout>
	
    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/divider_category" />

</LinearLayout>